--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@nextui-org/react": "^1.0.0-beta.12",
+    "classnames": "^2.3.2",
     "lottie-react": "^2.3.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-modern-drawer": "^1.1.2"
   },
   "devDependencies": {
