--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-modern-drawer": "^1.1.2"
+    "react-modern-drawer": "^1.1.2",
+    "swiper": "^8.4.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
