Added newsletter and footer section

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-modern-drawer": "^1.1.2",
-    "swiper": "^8.4.6",
-    "react-toast": "^1.0.3"
+    "react-toast": "^1.0.3",
+    "swiper": "^8.4.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
