--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-hook-form": "^7.42.1",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-modern-drawer": "^1.1.2",
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
     "react-toast": "^1.0.3",
-    "swiper": "^8.4.6"
+    "swiper": "^8.4.6",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
