--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.7.1",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-modern-drawer": "^1.1.2",
+    "react-no-ssr": "^1.1.0",
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
     "react-toast": "^1.0.3",
